--- a/.config/lazydocker/config.yml
+++ b/.config/lazydocker/config.yml
@@ -1,1 +1,25 @@
 reporting: "off"
+
+gui:
+  returnImmediately: true
+
+customCommands:
+  containers:
+    - name: bash
+      attach: true
+      command: 'docker exec -it {{ .Container.ID }} bash'
+      serviceNames: []
+    - name: sh
+      attach: true
+      command: 'docker exec -it {{ .Container.ID }} sh'
+      serviceNames: []
+
+  images:
+    - name: bash
+      attach: true
+      command: 'docker run -ti {{ .Image.ID }} bash'
+      serviceNames: []
+    - name: sh
+      attach: true
+      command: 'docker run -ti {{ .Image.ID }} sh'
+      serviceNames: []
